force-app/main/default/objects/DeliveryPackageItem__c/DeliveryPackageItem__c.object-meta.xml
<CustomObject>
    <label>Delivery Package Item</label>
    <nameField>
        <displayFormat>DPI-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>