force-app/main/default/objects/DeliveryPackageItem__c/fields/DeliveryPackage__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPackage__c</fullName>
    <label>Delivery Package</label>
    <referenceTo>DeliveryPackage__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>