force-app/main/default/objects/DeliveryPackageItem__c/fields/IsDraftStatus__c.field-meta.xml
<CustomField>
    <fullName>IsDraftStatus__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Labelled&apos;)</formula>
    <label>Draft Status?</label>
    <type>Checkbox</type>
</CustomField>