force-app/main/default/objects/DeliveryPackageItem__c/fields/IsFinalStatus__c.field-meta.xml
<CustomField>
    <fullName>IsFinalStatus__c</fullName>
    <formula>CONTAINS(&apos;Delivered, Returned To Sender, Cancelled&apos;, TEXT(Status__c))</formula>
    <label>Final Status?</label>
    <type>Checkbox</type>
</CustomField>