force-app/main/default/objects/DeliveryPackageItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labelled</fullName>
                <default>true</default>
                <label>Labelled</label>
            </value>
            <value>
                <fullName>Packaged</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Received By Carrier</fullName>
            </value>
            <value>
                <fullName>At Carrier Warehouse</fullName>
            </value>
            <value>
                <fullName>Out For Delivery</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
            <value>
                <fullName>Returning Back To Sender</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Returned To Sender</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>