force-app/main/default/objects/DeliveryPackageItem__c/fields/TrackingLink__c.field-meta.xml
<CustomField>
    <fullName>TrackingLink__c</fullName>
    <formula>HYPERLINK(&apos;https://www.royalmail.com/track-your-item#/tracking-results/&apos; +  TrackingId__c, TrackingId__c)</formula>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>